@@ -26,7 +26,6 @@ import org.springframework.data.domain.PageRequest;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
@@ -41,7 +40,7 @@ import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 @ExtendWith(MockitoExtension.class)
-class RecipeReviewServiceImplTest {
+class RecipeReviewServiceTest {
     @Mock
     private RecipeReviewRepository recipeReviewRepository;
     @Mock
@@ -49,7 +48,7 @@ class RecipeReviewServiceImplTest {
     @Mock
     private MemberRepository memberRepository;
     @InjectMocks
-    private RecipeReviewServiceImpl recipeReviewService;
+    private RecipeReviewService recipeReviewService;
 
     private Member getMember(){
         return Member.builder()
@@ -298,7 +297,7 @@ class RecipeReviewServiceImplTest {
                     .willReturn(
                             new PageImpl<>(
                                     new ArrayList<>(
-                                            Arrays.asList(
+                                            List.of(
                                                     recipeReview
                                             )
                                     ),
